# AzureDust-Elf

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: IMPLEMENTATION_ROADMAP.md  PHASE5_MIGRATION.md  RUNBOOK.md  V0_BLUEPRINT.md  V0_COMPLETION_AUDIT.md  V10_PHASE4_ASSET_PIPELINE_AUDIT.md  V11_PHASE4_COVER_ADAPTER_AUDIT.md  V12_PHASE4_STORYBOARD_PREVIEW_AUDIT.md  V13_PHASE4_SUBTITLE_TIMING_AUDIT.md  V14_PHASE4_VOICEOVER_TTS_AUDIT.md  V15_PHASE4_EDIT_PROJECT_AUDIT.md  V16_PHASE4_EXPORT_PROJECT_AUDIT.md  V17_PHASE4_PROJECT_BUNDLE_AUDIT.md  V18_PHASE4_DELIVERY_INDEX_AUDIT.md  V19_PHASE4_ASSET_MATERIALIZATION_AUDIT.md  V1_STEP1_COMPLETION_AUDIT.md  V1_STEP2_COMPLETION_AUDIT.md  V1_STEP3_COMPLETION_AUDIT.md  V1_STEP4_COMPLETION_AUDIT.md  V1_STEP5_COMPLETION_AUDIT.md  V1_STEP6_COMPLETION_AUDIT.md  V1_STEP7_COMPLETION_AUDIT.md  V1_STEP8_SHIPINHAO_AGENT_AUDIT.md  V20_PHASE4_LICENSED_MEDIA_INGEST_AUDIT.md  V21_PHASE4_LICENSED_MEDIA_PROXY_AUDIT.md  V22_PHASE4_EDITOR_REPLACEMENT_INSTRUCTIONS_AUDIT.md  V23_PHASE4_EDITOR_REPLACEMENT_EXECUTION_AUDIT.md  V24_PHASE4_EDITOR_PROJECT_MUTATION_SANDBOX_AUDIT.md  V25_PHASE4_EDITOR_SOFTWARE_IMPORT_EXECUTOR_AUDIT.md  V26_PHASE4_EDITOR_SOFTWARE_REAL_RUNNER_SANDBOX_AUDIT.md  V27_PHASE4_EDITOR_SOFTWARE_RUN_EVIDENCE_AUDIT.md  V28_PHASE4_ARTIFACT_STORE_AUDIT.md  V29_PHASE4_EXTERNAL_MIRROR_PLAN_AUDIT.md  V2_PHASE2_PERSISTENCE_AUDIT.md  V30_PHASE5_CONSOLE_AUDIT.md  V31_PHASE5_PROFILES_AUDIT.md  V32_PHASE5_JOB_QUEUE_AUDIT.md  V33_PHASE5_QUEUE_OPS_AUDIT.md  (+9 more)
(+190 files in other folders)
