[project]
name = "content-agent-os"
version = "0.1.0"
description = "Multi-agent content creation automation system skeleton"
requires-python = ">=3.11"
dependencies = [
  "Pillow>=10.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.content-agent-os]
stage = "phase5-console"
